# code

./: README.md
client/: README.md  limit_bandwidth.sh  start_memcached.sh  stop_memcached.sh
client/memcached-1.6.38/: Makefile  assoc.c.gcov  assoc.gcda  assoc.gcno  authfile.c.gcov  authfile.gcda  authfile.gcno  base64.c.gcov  base64.gcda  base64.gcno  bipbuffer.c.gcov  bipbuffer.gcda  bipbuffer.gcno  byteswap.h.gcov  cache.c.gcov  cache.gcda  cache.gcno  config.h  config.status  configure  crawler.c.gcov  crawler.gcda  crawler.gcno  crc32c.c.gcov  crc32c.gcda  crc32c.gcno  daemon.c.gcov  daemon.gcda  daemon.gcno  emmintrin.h.gcov  extstore.c.gcov  extstore.gcda  extstore.gcno  fcntl2.h.gcov  hash.c.gcov  hash.gcda  hash.gcno  items.c.gcov  items.gcda  items.gcno  (+64 more)
client/memcached-1.6.38/doc/: Makefile
coordinator/: README.md
coordinator/ALRC_system/: CMakeLists.txt  main.cpp
coordinator/ALRC_system/src/: decode.cpp  decode.hpp  encoder.cpp  encoder.hpp  memcached_client.hpp  partial_decode.cpp  partial_decode.hpp  placement.cpp  placement.hpp  repair.cpp  repair.hpp  single_repair.cpp  single_repair.hpp
coordinator/Jerasure/gf-complete/: Makefile  Makefile.in  config.status  configure  configure~  libtool
coordinator/libmemcached-1.0.18/: Makefile  aminclude.am  config.status  libtool  mem_config.h
coordinator/libmemcached-1.0.18/clients/: memcapable  memcat  memcp  memdump  memerror  memexist  memflush  memparse  memping  memrm  memslap  memstat  memtouch
coordinator/libmemcached-1.0.18/libmemcachedinternal/: libmemcachedutilinternal.la
(+51 files in other folders)
